# Mini-RAG-System

./: README.md  pyproject.toml
notebooks/: demo.ipynb
src/: main.py  pipeline.py  test.py
